--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "d3-dsv": "^3.0.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "hnswlib-node": "^1.4.2",
     "langchain": "^0.0.45",
     "morgan": "^1.10.0"
   }
